openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-angular
  labels:
    app: task-manager-angular
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: task-manager-angular
